--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- Visualización DW -->
             <div class="bl-chart" id="chartDw">
                 <!-- INICIO - Seleccionar opción 'Responsive iframe' - Incluir un ID --> <!-- MODIFICAR -->
-				<iframe title="Plazas residenciales por cada 100 personas de 65 y más años" aria-label="Mapa" id="datawrapper-chart-mruu2" src="https://datawrapper.dwcdn.net/mruu2/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="532" data-external="1"></iframe>
+				<iframe title="Plazas residenciales por cada 100 personas de 65 y más años" aria-label="Mapa" id="datawrapper-chart-mruu2" src="https://datawrapper.dwcdn.net/YNMVN/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="532" data-external="1"></iframe>
 				<script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();</script>
 				<!-- FINAL -->
                 <!-- INICIO - Opción Flourish --> <!-- MODIFICAR -->
